update swagger file, messages route.
